JEAP-5459: Add support for creating Jira tickets.